update 31-3